actividades actualizadas commit